--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor="#F63366"
-backgroundColor="#FFFFFF"
-secondaryBackgroundColor="#F0F2F6"
-textColor="#262730"
+primaryColor="#bae6f7"
+backgroundColor="#e4e3de"
+secondaryBackgroundColor="#b0c6f1"
+textColor="#141418"
 font="sans serif"
